[tool.poetry]
name = "flask-agent-function-calling-demo"
version = "0.1.0"
description = ""
authors = ["likhit <likhit.p19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "12.0"
janus = "1.0.0"
flask = "3.0.0"
flask-socketio = "5.3.6"
python-dotenv = "1.0.0"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
